Changes
=======

1.0a3 (unreleased)
------------------

* Fix bug https://bugs.launchpad.net/grok/+bug/160196 The initial
  password is now stored SHA1 encoded.

* Make the `zope.app.server.zpasswd` utility available as a
  commandline tool in bin/.

* Fix bug https://bugs.launchpad.net/grok/+bug/325299 The config files
  in paster-based grok projects are now generated by ``zc.buildout``
  in the new location ``parts/etc/`` and can be adjusted to local
  environments. Rerunning ``bin/buildout`` now rebuilds the
  configuration files in ``parts/etc/`` from the templates that can be
  found in ``etc/``.

  To start paster you now have to do::

    $ bin/paster serve parts/etc/deploy.ini

* Fix bug https://bugs.launchpad.net/grok/+bug/315214 by supporting
  faster test runs. See README-shorttests.txt for details.

* Pinned all package versions in the generated versions.cfg to the
  latest released ones.  Especially pinned z3c.recipe.eggbasket to
  the most recent one, 0.4.1.

* Integrated with grokcore.startup
  Removed ``startup.py`` from the paster template

* Paster: you need to first access http://localhost:8080/@@login.html 
  when running the debug.ini profile


1.0a2 (2009-01-12)
------------------

* Add option ``--grokversion`` which installs the requested version of
  Grok with the created project. Examples::

    grokproject --grokversion=0.14.1 Sample

  or::

    paster create -t grok Sample grokversion=0.14.1

* Add option ``--version`` to show grokproject version and stay
  compatible with most command-line tools.

* Fix bug https://bugs.launchpad.net/grok/+bug/315795 paster variant
  of grokproject now again accepts projectnames with uppercase chars.

1.0a1 (2009-01-08)
------------------

* Fixed bug: using the ``--svn-repository`` option would fail with an
  OSError.

* Add another template set for paster support

* Add option --zopectl to select 'zopectl' templates

* Make 'paster' the default template set

0.9 (2008-09-29)
----------------
