@@ -4,6 +4,10 @@ Changes
 1.0a3 (unreleased)
 ------------------
 
+* Fix bug https://bugs.launchpad.net/grok/+bug/315223
+  The eggs-directory path that we put in ~/.buildout/default.cfg is
+  now a shortened version on Windows (8.3 DOS style).
+
 * Fix bug https://bugs.launchpad.net/grok/+bug/160196 The initial
   password is now stored SHA1 encoded.
 
